fix gap problem with search

--- a/src/pages/FindMyJewelry.css
+++ b/src/pages/FindMyJewelry.css
@@ -1,3 +1,7 @@
+#Jewelries{
+    margin-top: 140px;
+
+}
 
 #serch-container {
     display: flex;
@@ -7,7 +11,7 @@
     justify-content: center; 
     align-items: center;   
     text-align: center;    
-    background-color: pink; 
+    background-color: rgb(246, 236, 238); 
     margin-top: 4px;
 }
 
@@ -21,4 +25,7 @@
     gap: 20px;
     flex-flow: row wrap;
 
+}
+#gap {
+    height: 30px;
 }
